# rust-multi-cleaner

./: .gitignore  Cargo.toml  README.md  build.md  lin.md  tests.md  win.md
cleaner/: Cargo.toml
cleaner/src/: lib.rs
cli/: Cargo.toml  build.rs
cli/src/: main.rs
cli/tests/: integration.rs
database/: Cargo.toml  build.rs  linux_database.json  program_connections.json  windows_database.json
database/src/: cleaner_database.rs  lib.rs  registry_database.rs  registry_utils.rs  structures.rs  utils.rs
gui/: Cargo.toml  build.rs
gui/src/: main.rs
