[package]
name = "multi-cleaner-gui"
version = "1.9.6"
edition = "2024"

[dependencies]
egui = "0.31.1"
eframe = "0.31.1"
env_logger = "0.11.6"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
notify-rust = "4"
image = "0.25.5"
tempfile = "3.3"
clap = { version = "4.0", features = ["derive"] }

database = { path = "../database" }
cleaner = { path = "../cleaner" }

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
FileDescription = "Garbage remover"
OriginalFilename = "multi-cleaner.exe"
LegalCopyright = "CORP INC © 2025"
ProductName = "Multi-cleaner"

[profile.release] # optimize file size
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
debug = false